@@ -1,6 +1,7 @@
 package com.example.woogisfree.domain.article.controller;
 
 import com.example.woogisfree.domain.article.dto.AddArticleRequest;
+import com.example.woogisfree.domain.article.dto.ArticleAllResponse;
 import com.example.woogisfree.domain.article.dto.ArticleResponse;
 import com.example.woogisfree.domain.article.dto.UpdateArticleRequest;
 import com.example.woogisfree.domain.article.entity.Article;
@@ -17,6 +18,8 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 @Tag(name = "Article", description = "게시글 API")
@@ -38,15 +41,18 @@ public class ArticleController {
         return ResponseEntity.status(HttpStatus.CREATED).body(result);
     }
 
+    /**
+     * TODO 게시글 전체 조회시에는 게시글 제목, 내용, 댓글 수만 조회하면 됨. 수정 필요
+     */
     @GetMapping
-    public ResponseEntity<List<ArticleResponse>> findAllArticles() {
+    public ResponseEntity<List<ArticleAllResponse>> findAllArticles() {
 
-        List<ArticleResponse> articles = articleService.findAll()
+        List<ArticleAllResponse> result = articleService.findAll()
                 .stream()
-                .sorted(Comparator.comparing(Article::getId))
-                .map(ArticleResponse::new)
-                .toList();
-        return ResponseEntity.ok().body(articles);
+                .sorted(Comparator.comparing(ArticleAllResponse::getArticleId).reversed())
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok().body(result);
     }
 
     @GetMapping("/{id}")
